# memeplex-llm

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml
flows/: 001_testing-chatflow.json  003_chroma-chatflow.json  004_autogpt-serp-chatflow.json  embedding-test-chatflow.json
memeplex_llm/: huggingface_example.py
notebooks/: 001_finetuned-llama.ipynb  002_finetuned-llama_colab.ipynb
