[tool.poetry]
name = "memeplex-llm"
version = "0.0.1"
description = ""
authors = ["Daniel Burger <public@danielburger.online>"]
readme = "README.md"
packages = [{include = "memeplex_llm"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.281"
huggingface-hub = "^0.16.4"
text-generation = "^0.6.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
mypy = "^1.5.1"
python-dotenv = "^1.0.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
